chapter8/8.1/loadbalancer - 복사본/my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "my-ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    # 사용할 ClusterIssuer를 지정합니다.
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - masungil.shop
    - www.masungil.shop
    # 인증서가 저장될 Secret의 이름을 지정합니다.
    secretName: masungil-shop-tls
  rules:
  - host: masungil.shop
    http:
      paths:
      - path: /apple
        pathType: Prefix
        backend:
          service:
            name: apple-service
            port:
              number: 8000
      - path: /banana
        pathType: Prefix
        backend:
          service:
            name: banana-service
            port:
              number: 8000
  - host: www.masungil.shop
    http:
      paths:
      - path: /apple
        pathType: Prefix
        backend:
          service:
            name: apple-service
            port:
              number: 8000
      - path: /banana
        pathType: Prefix
        backend:
          service:
            name: banana-service
            port:
              number: 8000
